# sqlite_safe_gen

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/routes/: mod.rs  router.rs  safe.rs
backend/src/routes/safe/: handlers.rs  models.rs
backend/src/storage/: traits.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  types.ts  vite-env.d.ts
frontend/src/components/: SafeTester.vue
frontend/src/core/: api.ts  crypto.ts  db.ts  safeManager.ts
frontend/src/test/: crypto.test.ts  db.test.ts  setup.ts
frontend/src/views/: HomeView.vue
